added LocationStats model